--- a/code/style.css
+++ b/code/style.css
@@ -17,8 +17,23 @@
   }
 }
 
-@media (min-width: 669px) {
-  flex-direction: 
+@media (max-width: 1200px) {
+  
+  header {
+    flex-wrap: wrap;
+    flex-direction: column;
+    /* justify-content: center; */
+  }
+  .big-news-container {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .small-news-container{
+    flex-direction: column;
+    justify-content: relative;
+    
+  }
 
 
 }
@@ -35,11 +50,13 @@ header {
   display:flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  border-radius: 30%;
+  -webkit-border-radius: 15px 15px 0 0;
+  /* border-radius: 15%; */
   /* border: 1px dotted brown; */
   background-color: salmon;
   width: 1200px;
-  margin: 60px;
+  height: 140px;
+  margin: 40px 60px 0 60px;
   padding: 20px;
   font-family: 'Righteous', cursive;
   overflow:hidden;
@@ -60,6 +77,12 @@ h1 {
 /* .head-site {
   border:2px solid black;
 } */
+
+.kids-ed {
+  font-size: 20px;
+  margin: -5px 0 0 90px;
+  
+}
 
 .logo {
   background-color: black;
@@ -83,17 +106,30 @@ h1 {
   align-self: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
+  background-color: rgb(22, 22, 65);
+  height: 45px;
+  width: 400px;
+  -webkit-border-radius: 15px;
+  justify-content: space-evenly;
   
 }
 
 a {
   color: #6acdf5;
-  margin: 10px;
+ 
+  
+}
+
+.nav-links {
+  font-family: 'Montserrat Alternates', sans-serif;
+  font-size: lighter;
+  padding: 13px;
+
 }
 
 a:hover {
   color: purple;
-  filter: invert(100%);
+  /* filter: invert(100%); */
   
 }
 
@@ -107,14 +143,15 @@ a:hover {
   display:flex;
   border: 10px solid black;
   background-color: rgb(32, 37, 39);
-  margin:60px 60px 0 60px;
+  margin:0 60px 0 60px;
   padding: 10px;
   height: 300px;
   width: 1200px;
-  flex-wrap; nowrap;
+  
   /* justify-content: column; */
-  font-family: 'Righteous';
-  justify-content: center;
+  
+  
+  
   /* object-fit: cover; */
   
 
@@ -127,46 +164,57 @@ a:hover {
   /* size: 50%; */
   margin: 0;
   border-radius: 10%;
+  filter: drop-shadow(5px 5px rgb(29, 106, 150));
   /* margin-left: auto; */
 
 }
 
 .title-text {
-  display: inline;
+  display: inline-flex;
+  margin: 0 50px 0 0;
+  color: rgb(78, 160, 253);
+  /* display: inline; */
   /* text-align: center; */
-  /* border:1px solid black; */
-  /* padding: 0 50px 0 50px; */
+  /* border:1px solid red; */
+  padding: 0 50px 0 50px;
   background-color: rgb(32, 37, 39);
-  font-family: 'Abril Fatface', cursive;
+  /* font-family: 'Abril Fatface', cursive; */
+  font-family: 'Montserrat Alternates', sans-serif;
+  width: 500px;
+  font-size: 100;
+
 
 
 }
 
 h3 {
-  font-size: 100px;
-  margin-top 0;
-  margin-bottom: 0;
+  font-size: 90px;
+  align-self: center;
+  /* margin-top 0;
+  /* margin-bottom: 0; */
 
 }
 
-h4 {
+/* h4 {
   font-size: 140px;
   margin-top: 0;
 
-}
+}  */
 
 .small-news-container {
   display: flex;
-  border: 10px solid sienna;
-  background-color: sienna;
+  -webkit-border-radius: 0 0 15px 15px;
+  border: 10px solid rgb(21, 21, 54);
+  background-color: rgb(21, 21, 54);
   margin: 0 60px 60px 60px;
   padding: 10px;
   /* height: 1200px; */
   width: 1200px;
-  justify-content: space-around;
-  text-align: justify;
+  justify-content: space-between;
+  /* text-align: justify; */
   flex-wrap: wrap;
-  object-fit: cover;
+  /* object-fit: cover; */
+  
   
 
  
@@ -177,9 +225,9 @@ h4 {
 
 .news1, .news2, .news3 {
   display: flex;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 0;
-  margin: 0;
+  margin: 30px;
   height: 250px;
   width: 300px;
   justify-content: center;
@@ -191,23 +239,35 @@ h4 {
 
 .news4, .news5, .news6 {
   display: flex;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 0;
-  margin: 40px 0 0 0;
+  margin: 30px;
   height: 250px;
   width: 300px;
   justify-content: center;
   position:  relative;
   flex-wrap: wrap;
+  object-fit: fill;
+}
+
+p {
+  font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .small-img{
   width: 300px;
+  height: 250px;
   border-radius: 10%;
+  border: 1px solid black;
+  filter: drop-shadow(5px 5px rgb(29, 106, 150));
+  
+  
+  /* overflow: hidden;
+   */
  
 
 .small-title {
-  position: absolute;
+  position: relative;
 
   
   
