--- a/code/news_site_2/styles.css
+++ b/code/news_site_2/styles.css
@@ -125,7 +125,6 @@ footer {
 
 .main-image {
   max-width: 80vw;
-  transition: 3s;
 }
 
 /* Remaining Articles */
@@ -135,7 +134,6 @@ footer {
 
 .article-image {
   max-width: 80vw;
-  transition: 3s;
 }
 
 /* Article Hover Effects */
@@ -248,28 +246,25 @@ article:hover .main-image {
 
 /* Media Queries */
 /* Media Query Tablet */
-@media (min-width: 668px) and (max-width: 1024) {
+@media (min-width: 668px) {
 
   /* Navbar */
   /* Article Wrapper */
   .article-wrapper {
     grid-template-columns: 1fr 1fr;
-    padding: 5vw 5vw 5vh 5vw;
+    padding: 5vw;
     gap: 2.5vw;
   }
 
   /* Head Article */
-  .head-article-wrapper {
-    position: relative;
-  }
-
   .head-article {
     grid-column: 1 / span 2;
     padding: 2.5vw 2.5vw;
+    flex-direction: column;
   }
 
   .main-image {
-    max-width: 45vw;
+    max-width: 55vw;
   }
 
   .head-content {
@@ -278,7 +273,13 @@ article:hover .main-image {
   }
 
   .head-content-2 {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
+  }
+
+  .head-article footer {
+    align-self: flex-end;
   }
 
   .read-more {
@@ -292,6 +293,7 @@ article:hover .main-image {
   /* Remaining Articles */
   .article {
     padding: 2.5vw 2.5vw;
+    grid-column: span 1;
   }
 
   .article-image {
@@ -353,6 +355,14 @@ article:hover .main-image {
 
 /* Media Query Desktop */
 @media (min-width: 1025px) {
+  .article-wrapper {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding: 5vw;
+    gap: 2.5vw;
+  }
 
+  .head-article {
+    grid-column: 1 / span 4;
+  }
 
 }
