--- a/code/style.css
+++ b/code/style.css
@@ -4,11 +4,11 @@ body {
   #FDA65D, #FFA810);
   font-family: 'Montserrat', sans-serif;
   font-weight: 400; 
-  /*padding: 10px;*/
+  /* padding: 10px; */
 }
 
 header {
-  padding: 5px;
+  padding: 10px;
   margin: -10px -8px 20px -8px;
   border-radius: 2px;
   display: grid;
@@ -25,7 +25,12 @@ header img {
   margin: 5px;
   grid-column-start: 2;
   justify-self: center;
-  align-self: center
+  align-self: center;
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .5));
+}
+
+.meny img {
+  filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));
 }
 
 nav {
@@ -58,8 +63,8 @@ a:visited, a:link {
 /* BIG-NEWS */
 .bigNews {
  padding: 5px;
- margin: 0 -18px 0 -18px;
-  /*border: 1px solid red;*/
+ margin: 0 -8px 0 -8px;
+  border-radius: 10px;
   display: flex;
   justify-content: space-evenly;
   background: linear-gradient(
@@ -161,8 +166,7 @@ button {
      #FDA65D, #FFA810);
   width: 100%;
   height: 100vh;
-  bottom: -104px;
-  right: 100%;
+  right: 96%;
   border-radius: 10px;
   opacity: 0;
   pointer-events: none;
@@ -222,6 +226,10 @@ li {
 
 /* TABLET */
 @media (min-width:668px) {
+  .bigNews {
+    border-radius: 0px;
+  }
+  
   header {
       grid-template-columns: repeat(5, 1fr);   
   }
@@ -265,6 +273,8 @@ li {
 @media (min-width:1024px) {
   .bigNews {
       flex-wrap: nowrap;
+      margin: 40px -18px 0 -18px;
+      border-radius: 0px;
   }
   .cards {
       display: grid;
@@ -276,7 +286,7 @@ li {
 footer {
   display: flex;
   justify-content: center;
-  margin-top: -50px;
+  margin-top: -20px;
 }
 
 footer img {
@@ -285,19 +295,19 @@ footer img {
 }
 
 footer a:first-child:hover {
-  filter: invert(31%) sepia(25%) saturate(1416%) hue-rotate(182deg) brightness(98%) contrast(84%);
+  filter: invert(31%) sepia(25%) saturate(1416%) hue-rotate(182deg) brightness(98%) contrast(84%) drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));
 }
 
 footer a:nth-child(2):hover {
-  filter: invert(21%) sepia(90%) saturate(2274%) hue-rotate(299deg) brightness(92%) contrast(88%);
+  filter: invert(21%) sepia(90%) saturate(2274%) hue-rotate(299deg) brightness(92%) contrast(88%) drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));
 }
 
 footer a:nth-child(3):hover {
-  filter: invert(51%) sepia(80%) saturate(2627%) hue-rotate(163deg) brightness(98%) contrast(103%);
+  filter: invert(51%) sepia(80%) saturate(2627%) hue-rotate(163deg) brightness(98%) contrast(103%) drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));;
 }
 
 footer a:nth-child(4):hover {
-  filter: invert(99%) sepia(0%) saturate(1623%) hue-rotate(201deg) brightness(117%) contrast(100%);
+  filter: invert(99%) sepia(0%) saturate(1623%) hue-rotate(201deg) brightness(117%) contrast(100%) drop-shadow( 3px 3px 2px rgba(0, 0, 0, .2));
 }
 
 /* ANIMATION */
