add minor layout changes for news-feed on large screens

--- a/code/style.css
+++ b/code/style.css
@@ -305,6 +305,10 @@ footer {
     border-radius: 5px;
     object-fit: cover;
   }
+
+  .news-feed {
+    max-width: 1500px;
+  }
 }
   
 @media (max-width: 992px) {    
