--- a/code/style.css
+++ b/code/style.css
@@ -1,28 +1,21 @@
 @media (max-width: 668px) {
 
-  header {
+  body {
+    flex-direction: column;
     flex-wrap: wrap;
-    flex-direction: column;
-    /* justify-content: center; */
-  }
-  .big-news-container {
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .small-news-container{
-    flex-direction: column;
-    justify-content: relative;
     
+  }
+  h1 {
+    color: brown;
   }
 }
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
   
   header {
     flex-wrap: wrap;
     flex-direction: column;
-    /* justify-content: center; */
+    justify-content: center;
   }
   .big-news-container {
     flex-wrap: wrap;
@@ -36,7 +29,7 @@
   }
 
 
-}
+} */
 
 /* ---------here starts all other css, only media quiries above--------*/
 
@@ -46,6 +39,10 @@ html {
   color: #fff;
 }
 
+body {
+  
+}
+
 header {
   display:flex;
   flex-wrap: wrap;
@@ -53,18 +50,20 @@ header {
   -webkit-border-radius: 15px 15px 0 0;
   /* border-radius: 15%; */
   /* border: 1px dotted brown; */
-  background-color: salmon;
-  width: 1200px;
+  /* background-color: salmon; */
+  background-color: rgba(30, 30, 48, 0.336);
+  width: 1190px;
   height: 140px;
   margin: 40px 60px 0 60px;
   padding: 20px;
-  font-family: 'Righteous', cursive;
+  /* font-family: 'Righteous', cursive; */
   overflow:hidden;
 
 }
 
 h1 {
   /* border:1px solid black; */
+  font-family: 'Righteous', cursive;
   margin-left: 20px;
   font-size: 50px;
   /* margin-bottom: 0; */
@@ -81,13 +80,13 @@ h1 {
 .kids-ed {
   font-size: 20px;
   margin: -5px 0 0 90px;
+  color: rgb(41, 73, 73);
   
 }
 
 .logo {
   background-color: black;
   color: blue;
-  font-family: 'Righteous', cursive;
   border-radius: 50%;
   height: 100px;
   width: 100px;
@@ -96,17 +95,28 @@ h1 {
   
 }
 
-.logo-text {
-  text-align: center;
+/* .logo-img {
+  height: 100%;
+  width: 100%;
 }
 
+.logo-text {
+  text-align: center;
+  font-weight: bolder;
+} */
+
+
+.img-img {
+ height: 20%;
+-ms-flex-align: start;
+}
 .nav-bar {
   display: flex;
   margin-left: auto;
   align-self: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  background-color: rgb(22, 22, 65);
+  background-color: rgb(19, 19, 31);
   height: 45px;
   width: 400px;
   -webkit-border-radius: 15px;
@@ -116,8 +126,11 @@ h1 {
 
 a {
   color: #6acdf5;
- 
-  
+  text-decoration: none;
+}
+
+a.small-link {
+  color: white;
 }
 
 .nav-links {
@@ -141,8 +154,9 @@ a:hover {
 
 .big-news-container{
   display:flex;
-  border: 10px solid black;
-  background-color: rgb(32, 37, 39);
+  border: 5px solid black;
+  /* background-color: rgb(32, 37, 39); */
+  background-color: rgba(255, 255, 0, 0.651);
   margin:0 60px 0 60px;
   padding: 10px;
   height: 300px;
@@ -158,13 +172,15 @@ a:hover {
 }
 
 .big-image {
+  height: 300px;
   /* border:2px solid black; */
   /* width: 400px; */
   /* height: 300px; */
   /* size: 50%; */
   margin: 0;
   border-radius: 10%;
-  filter: drop-shadow(5px 5px rgb(29, 106, 150));
+  filter: drop-shadow(5px 5px rgb(0, 0, 0));
+  object-fit: fill;
   /* margin-left: auto; */
 
 }
@@ -172,16 +188,18 @@ a:hover {
 .title-text {
   display: inline-flex;
   margin: 0 50px 0 0;
-  color: rgb(78, 160, 253);
+  color: rgb(4, 6, 8);
   /* display: inline; */
   /* text-align: center; */
   /* border:1px solid red; */
   padding: 0 50px 0 50px;
-  background-color: rgb(32, 37, 39);
+  /* background-color: rgb(32, 37, 39); */
   /* font-family: 'Abril Fatface', cursive; */
   font-family: 'Montserrat Alternates', sans-serif;
   width: 500px;
+  height: 300px;
   font-size: 100;
+  font-weight: bolder;
 
 
 
@@ -204,11 +222,11 @@ h3 {
 .small-news-container {
   display: flex;
   -webkit-border-radius: 0 0 15px 15px;
-  border: 10px solid rgb(21, 21, 54);
+  border: 5px solid rgb(21, 21, 54);
   background-color: rgb(21, 21, 54);
   margin: 0 60px 60px 60px;
   padding: 10px;
-  /* height: 1200px; */
+  height: 700px;
   width: 1200px;
   justify-content: space-between;
   /* text-align: justify; */
@@ -248,6 +266,7 @@ h3 {
   position:  relative;
   flex-wrap: wrap;
   object-fit: fill;
+  
 }
 
 p {
@@ -262,14 +281,24 @@ p {
   filter: drop-shadow(5px 5px rgb(29, 106, 150));
   
   
+  
   /* overflow: hidden;
    */
  
 
 .small-title {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  
+}
 
-  
-  
-  
+.foot-text {
+  display: inline;
+  margin-left: 200px;
+  background-color: yellow;
+  font-size: smaller;
+  align-items: center;
+  font-family: 'Montserrat Alternates', sans-serif;
 }
