restart mobile first

--- a/code/style.css
+++ b/code/style.css
@@ -1,16 +1,19 @@
 /* GENERAL STYLING */
 
+
 a {
-  all: unset;
-}
+    all: unset;
+  }
 
-body {
 
-  background-color: rgb(240, 240, 240);
-  display: flex;
-  flex-wrap: wrap;
+  body {
 
-}
+    background-color: rgb(240, 240, 240);
+    display: flex;
+    flex-wrap: wrap;
+  
+  }  
+
 
 p {
     font-family: 'Noto Serif', serif;
@@ -20,449 +23,97 @@ h1 {
     font-family: roboto slab;
 }
 
-h2 {
-    font-family: Noto Sans;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.2rem;
-    line-height: 27px;
-    color: #E4C1F9;
-}
-
-h3 {
-    font-family: Roboto slab;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1.3rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
-    margin-block-start: 0;
-    margin-block-end: 0;    
-}
-
 
 /* HEADER */
 
 
-    .header {
+.header {
 
-      background-color: #E4C1F9;
-      padding: 15px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-    }
+    background-color: #E4C1F9;
+    padding: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    /* Styling for ALL children */
-    .header > * {
+  /* Styling for ALL children */
+  .header > * {
 
-      flex: 1;
-      flex-grow: 1;
+    flex: 1;
+    flex-grow: 1;
 
-      min-width: 300px;
+  }
 
-    }
+/* Individual stylings */
 
-    /* Individual stylings */
-    .header img {
+.logo {
+
+    align-content: center;
+    padding: 2rem;
+}
+.header img {
+    flex: 1;
+    max-width: 100%;
+    align-content: center;
+    display: inline-flex;
+
+}  
+
+.menu {
+
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    justify-content: space-between;
+    background-color: #282D5E;
+    height: 45px;
+    width: 100%;
+    padding: 1rem;
+
+}
+
+
+.nav-list {
+
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    gap: 2%;
     
-      max-width: 100%;
-      padding-left: 1rem;
-    }
+}
 
-    .header p {
-
-      font-family: Roboto;
-      font-style: italic;
-      font-weight: 500;
-      font-size: 1.3rem;
-      color: #000000;
+.nav-list li {
     
-    }
+    flex: 1;
+    color: #E4C1F9;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1.1rem;
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
 
-    .weather {
-      text-align: end;
-      font-family: Noto Sans;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 1rem;
-      color: #a584b8;
+}
 
-    }
-
-
-
-/* MENU */
-
+@media (max-width:480px) {
 
     .menu {
 
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        background-color: #282D5E;
-        height: 45px;
-        padding-left: 2rem;
-
-    }
-
-    .nav-list {
-
-        display: flex;
-        flex-grow: 1;
-        flex: 1;
-        gap: 1.8rem;
-
-        margin: 0;
-        padding: 0;
-        list-style: none;
-
+        height: 12px;
     }
 
     .nav-list li {
 
-        /* float: left; */
-        color: #E4C1F9;
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 1.1rem;
-        align-items: center;
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    .nav-list li:hover {
-        color: #d1641b;
-        cursor: cell;
-    }
-
-
-/* TOP STORIES */
-
-    .top-stories-box {
-
-        background-color: #E4C1F9;
-        margin-top: 1rem;
-        margin-left: 1rem;
-        margin-right: 1rem;
-        margin-bottom: 0;
-        justify-content: center;
-
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-        width:95vw;
-        height: 550px;
-    }
-
-    .top-container {
-
-        display: flex;
-        height: 89%;
-    }
-
-    .top-container > * {
-        flex-grow:1;
-    }
-
-    .top-h1 {
-
-        display: block;
-        padding: 0.5em;
-        margin-block-start: 0;
-        margin-block-end: 0;
-        font-family: Roboto; 
-        font-style: normal;
-        font-weight: 700;
-        font-size: 1.8rem;
-        text-transform: uppercase;
-        color: #9055A2;
-    }
-
-    .top-section {
-
-        background-color: #9055A2;
-        flex-grow: 1;
-        width:50%;
-        height: 100%;
-
-        }
-
-    .text-top {
-
-        /* display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        justify-content:center; */
-        margin: 0 4rem 0 4rem ;
-        color: white;
-        }
-
-
-    .top-img {
-    
-        object-fit: cover;
-        height: 100%;
-
-    }
-
-
-    .top-btn {
-
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 800;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        background: black;
-        /* #FA8334 */
-        font-size: 16px;
-        cursor: pointer;
-        width: 278px;
-        height: 45px;
-        border-color: blueviolet;
-        border-radius: 4px;
-        margin-top: 1rem;
-
-        }
-        
-        .top-btn:hover {
-            background: #FA8334;
-        }
-        
-
-
-/* OTHER STORIES */
-
-
-    .other-stories-container {
-
-        margin-top: 2rem;
-        display: flex;
-        flex-wrap: wrap;
-
-        /* justify-content: center; */
-        gap: 1rem;
-        width: 75%;
-        height: 450px;
-        
-    }
-
-    .other-stories-container > * {
-
-    min-width: 250px;
-
-    }
-
-    .card {
-
-        background-color: rgba(228, 193, 249, 0.5);
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 450px;
-
-    }
-
-    .card-img {
-
-        background-color: cadetblue;
-        object-fit: cover;
-        width:100%;
-        height: 45%;
-        max-height: 200px;
-        min-height: 200px;
-        opacity: 1;
-
-    }
-
-    .stories-headlines {
-
-        max-height: 250px;
-        min-height: 150px;
-    }
-
-    .timestamp {
-
-        padding: 0 2rem 1rem 2rem;
-        justify-content: end;
-        text-align: end;
-    
-    }
-    
-/* MEDIA QUERIES */
-
-
-/* 
-320px — 480px: Mobile devices.
-481px — 768px: iPads, Tablets.
-769px — 1024px: Small screens, laptops.
-1025px — 1200px: Desktops, large screens.
-1201px and more — Extra large screens, TV. */
-
-@media (max-width: 480px) {
-    
-
-
-    .header {
-
-        background-color: rgb(56, 55, 55);
-
-    }
-    .menu {      flex-direction: column;
-    }
-
-    .nav-list{        
-        flex-direction: column;
-        display: none;
-    }
-
-    .top-container {
-
-        flex-direction: column;
-
-    }
-
-    .top-stories-box {}
-    .other-stories-container {}
-
-}
-
-@media (min-width:481px ) {
-    
-    .header {
-
-        background-color: rgb(107, 107, 107);
-
-    }
-    .menu {}
-
-
-    .nav-list{        
-        flex-direction: column;
-        display: none;
-    }
-    .top-container {
-
-        flex-direction: column;
-
-    }
-    .other-stories-container {}
-
-}
-
-
-@media (min-width:769px) {
-
-    .body {
-
-        flex-direction: column;
-    }
-    
-    .header {
-
-        background-color: rgb(166, 15, 204);
-
-        /* ta bort "aside" och fyll korten 100%bredd */
-
-    }
-    .menu {}
-
-
-    .nav-list, .menu {        
-        flex-direction: row;
-        display: inline-flex;
-        flex-grow: 1;
-    }
-
-    .top-stories-box {
-
-        height: 650px;
-        margin: 1rem;
-    }
-    .top-container {
-
-        flex-direction: column;
-        align-items: flex-end;
-        height: 93%;
-    }
-    .top-section {
-        height: 50%;
-        min-width: 100%;
-    }
-    .text-top {
-
-        display: block;
-
-    }
-
-    .top-img {
-
-        width: 100%;
-    }
-
-    .top-h1 {
-
-        font-size: 1.4rem;
-    }
-
-    .top-btn {
-
-        margin-bottom: 1rem;
-
-
-    }
-
-    .other-stories-container {
-        width: 95vw;
-        margin: auto;
+        font-size: 0.8rem;
     }
 
 }
 
 
-@media (min-width:1025px) {
-    
-    .header {
-
-        background-color: rgb(109, 201, 90);
-
-    }
-    .menu {}
-
-
-    .nav-list{   
-
-        flex-direction: row;
-        display: block;
-
-    }
-    
-
-    .top-stories-box {}
-    .other-stories-container {}
-
-}
-
-
-@media (min-width:1201px) {
-    
-    .header {
-
-        background-color: rgb(230, 57, 57);
-
-    }
-    .menu {}
-    .top-stories-box {}
-    .other-stories-container {
-
-
-        grid-column: 1 / span 3;
-    }
-
+.nav-list li:hover {
+    color: #d1641b;
+    cursor: cell;
 }
